--- a/layout.html
+++ b/layout.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/styles/tomorrow.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link href="http://localhost/~rafaparadela/cdn47/microsites/layout.css" rel="stylesheet">
+  <link href="http://47deg.github.io/microsites/layout.css" rel="stylesheet">
 </head>
 
 <body>
