Adding lib resources

--- a/layout.html
+++ b/layout.html
@@ -42,7 +42,7 @@
             <nav class="text-right">
               <ul>
                 <li>
-                  <a href="{{ page.github }}">
+                  <a href="{{ page.description }}">
                     <i class="fa fa-github"></i>
                     <span class="hidden-xs">GitHub</span>
                   </a>
@@ -64,7 +64,7 @@
         <h1 class="text-center">{{ page.description }}</h1>
         <h2></h2>
         <p class="text-center">
-          <a href="{{ page.github }}" class="btn btn-outline-inverse">View on GitHub</a>
+          <a href="{{page.github}}" class="btn btn-outline-inverse">View on GitHub</a>
         </p>
       </div>
     </div>
