Renames demo instead of default

--- a/docs.html
+++ b/docs.html
@@ -16,10 +16,8 @@
   <link rel="apple-touch-icon" href="[INSERT apple-tuch-icon.png]">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/styles/tomorrow.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <!-- <link href="http://47deg.github.io/microsites/style.css" rel="stylesheet"> -->
-  <link href="{{ site.baseurl }}style.css" rel="stylesheet">
-  <link href="{{ site.baseurl }}default.css" rel="stylesheet">
-
+  <link href="https://cdn.rawgit.com/47deg/microsites/cdn/style.css" rel="stylesheet">
+  <link href="https://cdn.rawgit.com/47deg/microsites/cdn/default/palette.css" rel="stylesheet">
 </head>
 
 <body class="docs">
