--- a/docs.html
+++ b/docs.html
@@ -16,8 +16,8 @@
   <link rel="apple-touch-icon" href="[INSERT apple-tuch-icon.png]">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/styles/tomorrow.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link href="https://cdn.rawgit.com/47deg/microsites/cdn/style.css" rel="stylesheet">
-  <link href="https://cdn.rawgit.com/47deg/microsites/cdn/default/palette.css" rel="stylesheet">
+  <link href="https://rawgit.com/47deg/microsites/cdn/style.css" rel="stylesheet">
+  <link href="https://rawgit.com/47deg/microsites/cdn/demo/palette.css" rel="stylesheet">
 </head>
 
 <body class="docs">
@@ -30,8 +30,8 @@
     <div id="sidebar-wrapper">
       <ul id="sidebar" class="sidebar-nav">
         <li class="sidebar-brand">
-          <a href="{{ site.baseurl }}">
-            <div class="brand-wrapper" style="background:url('{{ site.baseurl }}sidebar_brand.png') no-repeat">
+          <a href="/">
+            <div class="brand-wrapper" style="background:url('https://rawgit.com/47deg/microsites/cdn/{{ site.style }}/sidebar_brand.png') no-repeat">
               <span>{{ site.name }}</span>
             </div>
           </a>
@@ -47,11 +47,11 @@
                 <a href="#menu-toggle" id="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></a>
               </div>
               <ul class="pull-right">
-                <li class="hidden-xs"><a href=""><i class="fa fa-eye"></i><span>WATCH (45)</span></a></li>
-                <li class="hidden-xs"><a href=""><i class="fa fa-star-o"></i><span>STAR (379)</span></a></li>
-                <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                <li><a href=""><i class="fa fa-google-plus"></i></a></li>
+                <li class="hidden-xs"><a href=""><i class="fa fa-eye"></i><span>WATCH (<m id="eyes">--</m>)</span></a></li>
+                <li class="hidden-xs"><a href=""><i class="fa fa-star-o"></i><span>STARS (<m id="stars">--</m>)</span></a></li>
+                <li><a href="#" onclick="shareSiteTwitter();"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#" onclick="shareSiteFacebook();"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#" onclick="shareSiteGoogle();"><i class="fa fa-google-plus"></i></a></li>
               </ul>
             </div>
           </div>
@@ -73,6 +73,7 @@
       hljs.initHighlightingOnLoad();
       activeToggle();
       organizeContent();
+      loadGitHubStats();
     });
 
     function organizeContent() {
@@ -110,7 +111,6 @@
 
       });
     }
-
 
     function makeSectionAnchor(h, text, slug) {
       var a = $('<a></a>').attr({
@@ -169,6 +169,38 @@
         e.preventDefault();
         $("#wrapper").toggleClass("toggled");
       });
+    }
+
+    var baseURL = window.location.href;
+
+    function shareSiteFacebook() {
+      var title = '{{ site.name}}: {{ site.description}}';
+      launchPopup('http://www.facebook.com/sharer/sharer.php?u='+baseURL+'&t=' + title);
+    }
+
+    function shareSiteTwitter() {
+      var text = '{{ site.name}}: {{ site.description}} '+baseURL;
+      launchPopup('https://twitter.com/home?status=' + text);
+      return false;
+    }
+
+    function shareSiteGoogle() {
+      launchPopup('https://plus.google.com/share?url='+baseURL);
+      return false;
+    }
+
+    function launchPopup(url) {
+      window.open(url, 'Social Share', 'height=320, width=640, toolbar=no, menubar=no, scrollbars=no, resizable=no, location=no, directories=no, status=no');
+    }
+
+    function loadGitHubStats() {
+
+      var gitHubAPI = "https://api.github.com/repos/" + "{{ page.repo_owner }}" + "/" + "{{ page.repo_name }}" + "?callback=?";
+      $.getJSON(gitHubAPI).done(function(data) {
+        $('#eyes').text(data.data.subscribers_count);
+        $('#stars').text(data.data.stargazers_count);
+      });
+
     }
   </script>
 
