--- a/home.html
+++ b/home.html
@@ -16,8 +16,8 @@
   <link rel="apple-touch-icon" href="[INSERT apple-tuch-icon.png]">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/styles/tomorrow.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link href="https://cdn.rawgit.com/47deg/microsites/cdn/style.css" rel="stylesheet">
-  <link href="https://cdn.rawgit.com/47deg/microsites/cdn/default/palette.css" rel="stylesheet">
+  <link href="https://rawgit.com/47deg/microsites/cdn/style.css" rel="stylesheet">
+  <link href="https://rawgit.com/47deg/microsites/cdn/demo/palette.css" rel="stylesheet">
 </head>
 
 <body>
@@ -31,8 +31,8 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-6">
-            <a href="{{ site.baseurl }}" class="brand">
-              <div class="icon-wrapper" style="background:url('https://cdn.rawgit.com/47deg/microsites/cdn/{{ site.name }}/navbar_brand.png') no-repeat">
+            <a href="/" class="brand">
+              <div class="icon-wrapper" style="background:url('https://rawgit.com/47deg/microsites/cdn/{{ site.style }}/navbar_brand.png') no-repeat">
                 <span>{{ site.name }}</span>
               </div>
             </a>
@@ -46,7 +46,7 @@
                     <span class="hidden-xs">GitHub</span>
                   </a>
                 </li>
-                {% if site.apidocs %}
+                {% if site.docs %}
                 <li>
                   <a href="/docs">
                     <i class="fa fa-file-text"></i>
@@ -61,7 +61,7 @@
         </div>
       </div>
     </div>
-    <div class="jumbotron" style="background-image:url('https://cdn.rawgit.com/47deg/microsites/cdn/{{ site.name }}/jumbotron_pattern.png')">
+    <div class="jumbotron" style="background-image:url('https://rawgit.com/47deg/microsites/cdn/{{ site.style }}/jumbotron_pattern.png')">
       <div class="container">
         <h1 class="text-center">{{ site.description }}</h1>
         <h2></h2>
