--- a/docs.html
+++ b/docs.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/styles/tomorrow.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link href="https://rawgit.com/47deg/microsites/cdn/style.css" rel="stylesheet">
-  <link href="https://rawgit.com/47deg/microsites/cdn/demo/palette.css" rel="stylesheet">
+  <link href="https://rawgit.com/47deg/microsites/cdn/{{ site.style }}/palette.css" rel="stylesheet">
 </head>
 
 <body class="docs">
