--- a/home.html
+++ b/home.html
@@ -16,8 +16,7 @@
   <link rel="apple-touch-icon" href="[INSERT apple-tuch-icon.png]">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/styles/tomorrow.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link href="https://rawgit.com/47deg/microsites/cdn/style.css" rel="stylesheet">
-  <link href="https://rawgit.com/47deg/microsites/cdn/{{ site.style }}/palette.css" rel="stylesheet"> </head>
+  <link href="https://rawgit.com/47deg/microsites/cdn/style.css" rel="stylesheet"> </head>
 
 <body>
   <!--[if IE]>
@@ -29,7 +28,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-6">
-            <a href="/" class="brand">
+            <a href="#" data-href="{{ site.baseurl }}/" class="brand">
               <div class="icon-wrapper" style="background:url('https://rawgit.com/47deg/microsites/cdn/{{ site.style }}/navbar_brand.png') no-repeat"> <span>{{ site.name }}</span> </div>
             </a>
           </div>
@@ -37,10 +36,10 @@
             <nav class="text-right">
               <ul>
                 <li>
-                  <a href="#" data-href="{{ site.github }}"> <i class="fa fa-github"></i> <span class="hidden-xs">GitHub</span> </a>
+                  <a href="#" data-href="https://github.com/{{ site.github_owner }}{{ site.baseurl }}"> <i class="fa fa-github"></i> <span class="hidden-xs">GitHub</span> </a>
                 </li> {% if site.docs %}
                 <li>
-                  <a href="/docs"> <i class="fa fa-file-text"></i> <span class="hidden-xs">Documentation</span> </a>
+                  <a href="#" data-href="{{ site.baseurl }}/docs"> <i class="fa fa-file-text"></i> <span class="hidden-xs">Documentation</span> </a>
                 </li> {% endif %} </ul>
             </nav>
           </div>
@@ -51,7 +50,7 @@
       <div class="container">
         <h1 class="text-center">{{ site.description }}</h1>
         <h2></h2>
-        <p class="text-center"> <a href='#' data-href="{{ site.github }}" class="btn btn-outline-inverse">View on GitHub</a> </p>
+        <p class="text-center"> <a href='#' data-href="https://github.com/{{ site.github_owner }}{{ site.baseurl }}" class="btn btn-outline-inverse">View on GitHub</a> </p>
       </div>
     </div>
   </header>
@@ -63,12 +62,17 @@
     </section>
     <section class="technologies">
       <div class="container">
-        <div class="row"> {% for tech_hash in page.technologies %} {% for tech in tech_hash %}
-          <div class="col-md-4">
-            <div class="{{ tech[0] }}-icon-wrapper"></div>
-            <h3>{{ tech[1][0] }}</h3>
-            <p>{{ tech[1][1] }}</p>
-          </div> {% endfor %} {% endfor %} </div>
+        <div class="row">
+          {% for tech_hash in page.technologies %}
+            {% for tech in tech_hash %}
+              <div class="col-md-4">
+                <div class="{{ tech[0] }}-icon-wrapper"></div>
+                <h3>{{ tech[1][0] }}</h3>
+                <p>{{ tech[1][1] }}</p>
+              </div>
+            {% endfor %}
+          {% endfor %}
+        </div>
       </div>
     </section>
   </main>
@@ -76,12 +80,12 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-6">
-          <p>{{ site.name }} is design and development handcraft by <a href="http://www.47deg.com/" data-href="{{ site.author_url }}">{{ site.author }}</a></p>
-          <p>Code licensed <a href="https://opensource.org/licenses/MIT" data-href="{{ site.license_url }}">{{ site.license_name }}</a></p>
+          <p>{{ site.name }} is design and development handcraft by <a href="http://www.47deg.com/" target="_blank">http://47deg.com</a></p>
+          <p>Code licensed <a href="https://opensource.org/licenses/MIT" target="_blank">The MIT License</a></p>
         </div>
         <div class="col-xs-6">
           <p class="text-right">
-            <a href="#" data-href="{{ site.github }}"> <span class="fa fa-github"></span> View on Github </a>
+            <a href="#" data-href="https://github.com/{{ site.github_owner }}{{ site.baseurl }}"> <span class="fa fa-github"></span> View on Github </a>
           </p>
         </div>
       </div>
@@ -93,9 +97,18 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/languages/scala.min.js"></script>
   <script>
     jQuery(document).ready(function() {
+      loadStyle();
       hljs.initHighlightingOnLoad();
       activeLinks();
     });
+
+    function loadStyle() {
+      $("<link/>", {
+        rel: "stylesheet",
+        type: "text/css",
+        href: "https://rawgit.com/47deg/microsites/cdn/{{ site.style }}/palette.css"
+      }).appendTo("head");
+    }
 
     function activeLinks() {
       $('a[data-href]').each(function(index, el) {
