--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-6">
-            <a href="/" class="brand">
+            <a href="#" data-href="/microsites/" class="brand">
               <div class="icon-wrapper" style="background:url('https://rawgit.com/47deg/microsites/cdn/default/navbar_brand.png') no-repeat"> <span>MyDemo</span> </div>
             </a>
           </div>
@@ -36,7 +36,7 @@
                   <a href="#" data-href="https://github.com/47deg/microsites"> <i class="fa fa-github"></i> <span class="hidden-xs">GitHub</span> </a>
                 </li> 
                 <li>
-                  <a href="/docs"> <i class="fa fa-file-text"></i> <span class="hidden-xs">Documentation</span> </a>
+                  <a href="#" data-href="/microsites/docs"> <i class="fa fa-file-text"></i> <span class="hidden-xs">Documentation</span> </a>
                 </li>  </ul>
             </nav>
           </div>
@@ -147,8 +147,8 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-6">
-          <p>MyDemo is design and development handcraft by <a href="http://www.47deg.com/" data-href="http://47deg.com">47 Degrees</a></p>
-          <p>Code licensed <a href="https://opensource.org/licenses/MIT" data-href="https://opensource.org/licenses/MIT">The MIT License</a></p>
+          <p>MyDemo is design and development handcraft by <a href="http://www.47deg.com/" target="_blank">http://47deg.com</a></p>
+          <p>Code licensed <a href="https://opensource.org/licenses/MIT" target="_blank">The MIT License</a></p>
         </div>
         <div class="col-xs-6">
           <p class="text-right">
@@ -190,3 +190,5 @@
 
 
 <!-- https://cdn.rawgit.com/47deg/microsites/cdn/home.html  -->
+<!-- https://rawgit.com/47deg/microsites/cdn/home.html  -->
+<!-- http://localhost/~rafaparadela/cdn47/microsites/home.html  -->
