Changes name of the company/author

--- a/home.html
+++ b/home.html
@@ -80,7 +80,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-6">
-          <p>{{ site.name }} is design and development handcraft by <a href="http://www.47deg.com/" target="_blank">http://47deg.com</a></p>
+          <p>{{ site.name }} is design and development handcraft by <a href="http://www.47deg.com/" target="_blank">47 Degrees</a></p>
           <p>Code licensed <a href="https://opensource.org/licenses/MIT" target="_blank">The MIT License</a></p>
         </div>
         <div class="col-xs-6">
