--- a/docs.html
+++ b/docs.html
@@ -46,8 +46,8 @@
                 <a href="#menu-toggle" id="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></a>
               </div>
               <ul class="pull-right">
-                <li class="hidden-xs"><a href=""><i class="fa fa-eye"></i><span>WATCH (<m id="eyes">--</m>)</span></a></li>
-                <li class="hidden-xs"><a href=""><i class="fa fa-star-o"></i><span>STARS (<m id="stars">--</m>)</span></a></li>
+                <li class="hidden-xs"><a href="#" data-href="https://github.com/{{ site.github_owner }}{{ site.baseurl }}"><i class="fa fa-eye"></i><span>WATCH (<m id="eyes">--</m>)</span></a></li>
+                <li class="hidden-xs"><a href="#" data-href="https://github.com/{{ site.github_owner }}{{ site.baseurl }}"><i class="fa fa-star-o"></i><span>STARS (<m id="stars">--</m>)</span></a></li>
                 <li><a href="#" onclick="shareSiteTwitter();"><i class="fa fa-twitter"></i></a></li>
                 <li><a href="#" onclick="shareSiteFacebook();"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="#" onclick="shareSiteGoogle();"><i class="fa fa-google-plus"></i></a></li>
@@ -210,7 +210,7 @@
 
     function loadGitHubStats() {
 
-      var gitHubAPI = "https://api.github.com/repos/" + "{{ page.repo_owner }}" + "/" + "{{ page.repo_name }}" + "?callback=?";
+      var gitHubAPI = "https://api.github.com/repos/" + "{{ site.github_owner }}{{ site.baseurl }}" + "?callback=?";
       $.getJSON(gitHubAPI).done(function(data) {
         $('#eyes').text(data.data.subscribers_count);
         $('#stars').text(data.data.stargazers_count);
