--- a/docs.html
+++ b/docs.html
@@ -43,8 +43,8 @@
                 <a href="#menu-toggle" id="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></a>
               </div>
               <ul class="pull-right">
-                <li class="hidden-xs"><a href=""><i class="fa fa-eye"></i><span>WATCH (<m id="eyes">--</m>)</span></a></li>
-                <li class="hidden-xs"><a href=""><i class="fa fa-star-o"></i><span>STARS (<m id="stars">--</m>)</span></a></li>
+                <li class="hidden-xs"><a href="#" data-href="https://github.com/47deg/microsites"><i class="fa fa-eye"></i><span>WATCH (<m id="eyes">--</m>)</span></a></li>
+                <li class="hidden-xs"><a href="#" data-href="https://github.com/47deg/microsites"><i class="fa fa-star-o"></i><span>STARS (<m id="stars">--</m>)</span></a></li>
                 <li><a href="#" onclick="shareSiteTwitter();"><i class="fa fa-twitter"></i></a></li>
                 <li><a href="#" onclick="shareSiteFacebook();"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="#" onclick="shareSiteGoogle();"><i class="fa fa-google-plus"></i></a></li>
@@ -308,7 +308,7 @@ object repositories {<span class="sb">
 
     function loadGitHubStats() {
 
-      var gitHubAPI = "https://api.github.com/repos/" + "47deg" + "/" + "microsites" + "?callback=?";
+      var gitHubAPI = "https://api.github.com/repos/" + "47deg/microsites" + "?callback=?";
       $.getJSON(gitHubAPI).done(function(data) {
         $('#eyes').text(data.data.subscribers_count);
         $('#stars').text(data.data.stargazers_count);
