--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>MyDemo</title>
+  <title>Microsites</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -26,7 +26,7 @@
         <div class="row">
           <div class="col-xs-6">
             <a href="#" data-href="/microsites/" class="brand">
-              <div class="icon-wrapper" style="background:url('https://rawgit.com/47deg/microsites/cdn/default/navbar_brand.png') no-repeat"> <span>MyDemo</span> </div>
+              <div class="icon-wrapper" style="background:url('https://rawgit.com/47deg/microsites/cdn/default/navbar_brand.png') no-repeat"> <span>Microsites</span> </div>
             </a>
           </div>
           <div class="col-xs-6">
@@ -45,7 +45,7 @@
     </div>
     <div class="jumbotron" style="background-image:url('https://rawgit.com/47deg/microsites/cdn/default/jumbotron_pattern.png')">
       <div class="container">
-        <h1 class="text-center">A demo to show how microsites work</h1>
+        <h1 class="text-center">It enriches your library with a fancy documentation site</h1>
         <h2></h2>
         <p class="text-center"> <a href="#" data-href="https://github.com/47deg/microsites" class="btn btn-outline-inverse">View on GitHub</a> </p>
       </div>
@@ -147,7 +147,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-6">
-          <p>MyDemo is design and development handcraft by <a href="http://www.47deg.com/" target="_blank">47 Degrees</a></p>
+          <p>Microsites is design and development handcraft by <a href="http://www.47deg.com/" target="_blank">47 Degrees</a></p>
           <p>Code licensed <a href="https://opensource.org/licenses/MIT" target="_blank">The MIT License</a></p>
         </div>
         <div class="col-xs-6">
