--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
   <meta name="twitter:image" content="https://rawgit.com/47deg/microsites/cdn/{{ site.style }}/poster.png" />
   <meta property="og:title" content="{{ site.name }}"/>
   <meta property="og:site_name" content="{{ site.name }}"/>
-  <meta property="og:url" content="http://47deg.github.io{{ site.baseurl }}"/>
+  <meta property="og:url" content="http://47deg.github.io{{ site.baseurl }}/"/>
   <meta property="og:type" content="website" />
   <meta property="og:description" content="{{ site.description }}"/>
   <meta name="twitter:card" content="summary_large_image">
