--- a/docs.html
+++ b/docs.html
@@ -13,9 +13,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{ site.description }}">
   <meta name="author" content="{{ page.author }}">
-  <link rel="icon" type="image/png" href="http://www.47deg.com/assets/img/custom/favicon.png" />
-  <meta property="og:image" content="https://rawgit.com/47deg/microsites/cdn/{{ site.style }}/poster.png"/>
-  <meta name="twitter:image" content="https://rawgit.com/47deg/microsites/cdn/{{ site.style }}/poster.png" />
+  <link rel="icon" type="image/png" href="{{ site.favicon.url }}" />
+  <meta property="og:image" content="{{ site.cdn.url }}/{{ site.style }}/poster.png"/>
+  <meta name="twitter:image" content="{{ site.cdn.url }}/{{ site.style }}/poster.png" />
   <meta property="og:title" content="{{ site.name }}"/>
   <meta property="og:site_name" content="{{ site.name }}"/>
   <meta property="og:url" content="http://47deg.github.io{{ site.baseurl }}/"/>
@@ -25,7 +25,7 @@
   <meta name="twitter:site" content="@47deg">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link href="https://rawgit.com/47deg/microsites/cdn/style.css" rel="stylesheet">
+
 </head>
 
 <body class="docs">
@@ -39,7 +39,7 @@
       <ul id="sidebar" class="sidebar-nav">
         <li class="sidebar-brand">
           <a href="#" data-href="{{ site.baseurl }}/">
-            <div class="brand-wrapper" style="background:url('https://rawgit.com/47deg/microsites/cdn/{{ site.style }}/sidebar_brand.png') no-repeat">
+              <div class="brand-wrapper" style="background:url('{{ site.cdn.url }}/{{ site.style }}/sidebar_brand.png') no-repeat">
               <span>{{ site.name }}</span>
             </div>
           </a>
@@ -88,11 +88,19 @@
     });
 
     function loadStyle() {
+
       $("<link/>", {
         rel: "stylesheet",
         type: "text/css",
-        href: "https://rawgit.com/47deg/microsites/cdn/{{ site.style }}/palette.css"
+        href: "{{ site.cdn.url }}/style.css"
       }).appendTo("head");
+      
+      $("<link/>", {
+        rel: "stylesheet",
+        type: "text/css",
+        href: "{{ site.cdn.url }}/{{ site.style }}/palette.css"
+      }).appendTo("head");
+
     }
 
     function loadHighlight() {
