--- a/home.html
+++ b/home.html
@@ -13,9 +13,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{ site.description }}">
   <meta name="author" content="{{ page.author }}">
-  <link rel="icon" type="image/png" href="http://www.47deg.com/assets/img/custom/favicon.png" />
-  <meta property="og:image" content="https://rawgit.com/47deg/microsites/cdn/{{ site.style }}/poster.png"/>
-  <meta name="twitter:image" content="https://rawgit.com/47deg/microsites/cdn/{{ site.style }}/poster.png" />
+  <link rel="icon" type="image/png" href="{{ site.favicon.url }}" />
+  <meta property="og:image" content="{{ site.cdn.url }}/{{ site.style }}/poster.png"/>
+  <meta name="twitter:image" content="{{ site.cdn.url }}/{{ site.style }}/poster.png" />
   <meta property="og:title" content="{{ site.name }}"/>
   <meta property="og:site_name" content="{{ site.name }}"/>
   <meta property="og:url" content="http://47deg.github.io{{ site.baseurl }}/"/>
@@ -25,7 +25,7 @@
   <meta name="twitter:site" content="@47deg">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link href="https://rawgit.com/47deg/microsites/cdn/style.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -39,7 +39,7 @@
         <div class="row">
           <div class="col-xs-6">
             <a href="#" data-href="{{ site.baseurl }}/" class="brand">
-              <div class="icon-wrapper" style="background:url('https://rawgit.com/47deg/microsites/cdn/{{ site.style }}/navbar_brand.png') no-repeat"> <span>{{ site.name }}</span> </div>
+              <div class="icon-wrapper" style="background:url('{{ site.cdn.url }}/{{ site.style }}/navbar_brand.png') no-repeat"> <span>{{ site.name }}</span> </div>
             </a>
           </div>
           <div class="col-xs-6">
@@ -56,7 +56,7 @@
         </div>
       </div>
     </div>
-    <div class="jumbotron" style="background-image:url('https://rawgit.com/47deg/microsites/cdn/{{ site.style }}/jumbotron_pattern.png')">
+    <div class="jumbotron" style="background-image:url('{{ site.cdn.url }}/{{ site.style }}/jumbotron_pattern.png')">
       <div class="container">
         <h1 class="text-center">{{ site.description }}</h1>
         <h2></h2>
@@ -113,10 +113,17 @@
     });
 
     function loadStyle() {
+
       $("<link/>", {
         rel: "stylesheet",
         type: "text/css",
-        href: "https://rawgit.com/47deg/microsites/cdn/{{ site.style }}/palette.css"
+        href: "{{ site.cdn.url }}/style.css"
+      }).appendTo("head");
+
+      $("<link/>", {
+        rel: "stylesheet",
+        type: "text/css",
+        href: "{{ site.cdn.url }}/{{ site.style }}/palette.css"
       }).appendTo("head");
     }
 
